--- a/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
+++ b/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar">
     
     <div class="option_container">
-        <a href="hollowbar-initial/client"> {{"home" | translate}}</a>
+        <a href="/hollowbar-initial/client"> {{"home" | translate}}</a>
         <a (click)="navigateToFooter()"> {{"contactUs" | translate }}</a>
-        <a href="#"> {{"events" | translate }}</a>
+        <a (click)="navigateToFooter()"> {{"events" | translate }}</a>
     </div>
     <div class="language-buttons">
         <button (click)="es()" class="es">ES</button>
@@ -13,7 +13,7 @@
         <fa-icon [icon]="iconMenu" id="menu_hamb"></fa-icon>
     </div>
     <div class="logo_nav">
-        <a href="hollowbar-initial/client"><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="Logo"></a>
+        <a href="/hollowbar-initial/client"><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="Logo"></a>
     </div>
    
 </nav>
