--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -26,7 +26,7 @@
             </ng-container>
 
             <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef></th>
+                <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element">
                     <mat-icon (click)="addEvent(element.id)" class="btn-edit"
                         matTooltip="{{ 'edit' | translate }} {{ 'event' | translate }}">edit</mat-icon>
