--- a/frontend-bar/src/app/components/order/list-order-employee/list-order-employee.component.html
+++ b/frontend-bar/src/app/components/order/list-order-employee/list-order-employee.component.html
@@ -36,7 +36,7 @@
             <!-- Status Column -->
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ element.status }}</td>
             </ng-container>
 
             <ng-container matColumnDef="action">
