--- a/frontend-bar/src/app/components/products/list-product/list-product.component.html
+++ b/frontend-bar/src/app/components/products/list-product/list-product.component.html
@@ -48,7 +48,7 @@
 
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.id_status }}</td>
+                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ element.status }}</td>
             </ng-container>
 
             <ng-container matColumnDef="action">
