--- a/frontend-bar/src/app/components/table/list-table/list-table.component.html
+++ b/frontend-bar/src/app/components/table/list-table/list-table.component.html
@@ -25,7 +25,7 @@
             <!-- Status Column -->
             <ng-container matColumnDef="name_status">
                 <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ element.name }}</td>
             </ng-container>
 
 
