--- a/frontend-bar/src/app/components/user/list-user/list-user.component.html
+++ b/frontend-bar/src/app/components/user/list-user/list-user.component.html
@@ -31,17 +31,17 @@
             <!-- Status Column -->
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ element.status }}</td>
             </ng-container>
 
             <!-- Rol Column -->
             <ng-container matColumnDef="rol">
                 <th mat-header-cell *matHeaderCellDef>{{ "rol" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.rol }}</td>
+                <td mat-cell *matCellDef="let element" >{{ element.rol }}</td>
             </ng-container>
 
             <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef> </th>
+                <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element" id="tdaction">
                     <mat-icon (click)="addUser(element.id)" class="btn-edit"
                         matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
