--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -1,44 +1,36 @@
 <app-navbar></app-navbar>
 <h1 class="title">{{ "navEvent" | translate }}</h1>
 <section>
-
     <div class="mat-elevation-z8">
         <div class="search_add">
             <mat-form-field>
                 <mat-label>{{ "filter" | translate }}</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
-            <button (click)="addEvent()" mat-flat-button color="primary" class="add_"><mat-icon >add</mat-icon></button>
+            <button (click)="addEvent()" mat-flat-button color="primary" class="add_"><mat-icon>add</mat-icon></button>
         </div>
-
         <table mat-table [dataSource]="dataSource" matSort>
-
             <!-- Name Event Column -->
             <ng-container matColumnDef="name_event">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameEvent" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.name_event }}</td>
             </ng-container>
-
             <!-- Date Column -->
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef>{{ "dateEvent" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.date | date:'dd/MM/yyyy HH:mm:ss' }}</td>
             </ng-container>
-
+            <!-- Action Buttons -->
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element">
-                    <mat-icon (click)="addEvent(element.id)" class="btn-edit"
-                        matTooltip="{{ 'edit' | translate }} {{ 'event' | translate }}">edit</mat-icon>
-                    <mat-icon (click)="deleteEvent(element.id)" class="btn-delete"
-                        matTooltip="{{ 'delete' | translate }} {{ 'event' | translate }}">delete</mat-icon>
+                    <mat-icon (click)="addEvent(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ 'event' | translate }}">edit</mat-icon>
+                    <mat-icon (click)="deleteEvent(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ 'event' | translate }}">delete</mat-icon>
                 </td>
             </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
 </section>
