--- a/frontend-bar/src/app/components/order/list-order-employee/list-order-employee.component.html
+++ b/frontend-bar/src/app/components/order/list-order-employee/list-order-employee.component.html
@@ -12,69 +12,38 @@
                 <mat-icon class="btn-delete">add</mat-icon>
             </button>
         </div>
-
         <table mat-table [dataSource]="dataSource" matSort>
-
             <!-- Type Document Column -->
             <ng-container matColumnDef="type_document">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "typeDocument" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.type_document }}</td>
             </ng-container>
-
             <!-- Number Document Column -->
             <ng-container matColumnDef="num_document">
                 <th mat-header-cell *matHeaderCellDef>{{ "numDocument" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.num_document }}</td>
             </ng-container>
-
             <!-- Table Column -->
             <ng-container matColumnDef="table">
                 <th mat-header-cell *matHeaderCellDef>{{ "gridTable" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.name_table }}</td>
             </ng-container>
-
             <!-- Status Column -->
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ element.status }}</td>
+                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.status) }}</td>
             </ng-container>
-
+            <!-- Action Buttons -->
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element" id="tdaction">
-                    <mat-icon (click)="addOrder(element.id)" class="btn-edit"
-                        matTooltip="{{ 'edit' | translate }}">edit</mat-icon>
-                    <mat-icon (click)="deleteOrder(element.id)" class="btn-delete"
-                        matTooltip="{{ 'delete' | translate }}">delete</mat-icon>
+                    <mat-icon (click)="addOrder(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }}">edit</mat-icon>
+                    <mat-icon (click)="deleteOrder(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }}">delete</mat-icon>
                 </td>
             </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
-
-    <!-- <div class="container mt-2 text-center">
-        <h2>Usuarios</h2>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Rol</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let user of listUser">
-                    <th>{{ user.name }}</th>
-                    <th>{{ user.email }}</th>
-                    <th>{{ user.status }}</th>
-                    <th>{{ user.rol }}</th>
-                </tr>
-            </tbody>
-        </table>
-    </div> -->
 </section>
