--- a/frontend-bar/src/app/components/products/list-product/list-product.component.html
+++ b/frontend-bar/src/app/components/products/list-product/list-product.component.html
@@ -3,68 +3,52 @@
 <section>
     <div class="mat-elevation-z8">
         <div class="search_add">
-            <!-- Button Add -->
             <mat-form-field>
                 <mat-label>{{ "filter" | translate }}</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
-            <!-- <button (click)="addUser()" mat-flat-button color="primary">{{ "add" | translate }}</button> -->
+            <!-- Button Add -->
             <button (click)="addProduct()" mat-flat-button color="primary" class="add_">
                 <mat-icon>add</mat-icon>
             </button>
         </div>
-
         <table mat-table [dataSource]="dataSource" matSort>
-
             <!-- Name Product Column -->
             <ng-container matColumnDef="name_product">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameProduct" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.name_product }}</td>
             </ng-container>
-
             <!-- Image Column -->
-            <!-- <ng-container matColumnDef="image">
-                <th mat-header-cell *matHeaderCellDef>{{ "imageProduct" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.image }}</td>
-            </ng-container> -->
             <ng-container matColumnDef="image">
                 <th mat-header-cell *matHeaderCellDef>{{ "imageProduct" | translate }}</th>
                 <td mat-cell *matCellDef="let element">
                     <img [src]="baseUrl + element.image" alt="Product Image">
                 </td>
             </ng-container>
-
             <!-- Price Column -->
             <ng-container matColumnDef="price">
                 <th mat-header-cell *matHeaderCellDef>{{ "price" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.price }}</td>
             </ng-container>
-
             <!-- Stock Column -->
             <ng-container matColumnDef="stock">
                 <th mat-header-cell *matHeaderCellDef>{{ "stock" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
             </ng-container>
-
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ element.status }}</td>
+                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.status) }}</td>
             </ng-container>
-
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element" id="tdaction">
-                    <mat-icon (click)="addProduct(element.id)" class="btn-edit"
-                        matTooltip="{{ 'edit' | translate }} {{ element.name_product }}">edit</mat-icon>
-                    <mat-icon (click)="deleteProduct(element.id)" class="btn-delete"
-                        matTooltip="{{ 'delete' | translate }} {{ element.name_product }}" >delete</mat-icon>
+                    <mat-icon (click)="addProduct(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ element.name_product }}">edit</mat-icon>
+                    <mat-icon (click)="deleteProduct(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ element.name_product }}" >delete</mat-icon>
                 </td>
             </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
 </section>
