--- a/frontend-bar/src/app/components/rol/list-rol/list-rol.component.html
+++ b/frontend-bar/src/app/components/rol/list-rol/list-rol.component.html
@@ -9,29 +9,22 @@
             </mat-form-field>
             <button (click)="addRol()" mat-flat-button color="primary" class="add_"><mat-icon>add</mat-icon></button>
         </div>
-
         <table mat-table [dataSource]="dataSources" matSort>
-
             <!-- Name Event Column -->
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameRol" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+                <td mat-cell *matCellDef="let element">{{ translateRolName(element.name) }}</td>
             </ng-container>
-
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element">
-                    <mat-icon (click)="addRol(element.id)" class="btn-edit"
-                        matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
-                    <mat-icon (click)="deleteRol(element.id)" class="btn-delete"
-                        matTooltip="{{ 'delete' | translate }} {{ element.name }}">delete</mat-icon>
+                    <mat-icon (click)="addRol(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ translateRolName(element.name) }}">edit</mat-icon>
+                    <mat-icon (click)="deleteRol(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ translateRolName(element.name) }}">delete</mat-icon>
                 </td>
             </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
 </section>
