--- a/frontend-bar/src/app/components/table/list-table/list-table.component.html
+++ b/frontend-bar/src/app/components/table/list-table/list-table.component.html
@@ -3,68 +3,36 @@
 <section>
     <div class="mat-elevation-z8">
         <div class="search_add">
-            <!-- Button Add -->
             <mat-form-field>
                 <mat-label>{{ "filter" | translate }}</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
+            <!-- Button Add -->
             <button (click)="addTable()" mat-flat-button color="primary" class="add_">
                 <mat-icon class="btn-delete">add</mat-icon>
             </button>
         </div>
-
         <table mat-table [dataSource]="dataSource" matSort>
-
             <!-- Name Column -->
             <ng-container matColumnDef="name_table">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameTable" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.name_table }}</td>
             </ng-container>
-
-
             <!-- Status Column -->
             <ng-container matColumnDef="name_status">
                 <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ element.name }}</td>
+                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.name) }}</td>
             </ng-container>
-
-
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element" id="tdaction">
-                    <mat-icon (click)="addTable(element.id)" class="btn-edit"
-                        matTooltip="{{ 'edit' | translate }} {{ element.name_table }}">edit</mat-icon>
-                    <mat-icon (click)="deleteUser(element.id)" class="btn-delete"
-                        matTooltip="{{ 'delete' | translate }} {{ element.name_table }}" >delete</mat-icon>
+                    <mat-icon (click)="addTable(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ element.name_table }}">edit</mat-icon>
+                    <mat-icon (click)="deleteUser(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ element.name_table }}" >delete</mat-icon>
                 </td>
             </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
-
-    <!-- <div class="container mt-2 text-center">
-        <h2>Usuarios</h2>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Rol</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let user of listUser">
-                    <th>{{ user.name }}</th>
-                    <th>{{ user.email }}</th>
-                    <th>{{ user.status }}</th>
-                    <th>{{ user.rol }}</th>
-                </tr>
-            </tbody>
-        </table>
-    </div> -->
 </section>
