--- a/frontend-bar/src/app/components/user/list-user/list-user.component.html
+++ b/frontend-bar/src/app/components/user/list-user/list-user.component.html
@@ -1,59 +1,48 @@
 <app-navbar></app-navbar>
-
 <h1 class="title">{{ "navUser" | translate }}</h1>
 <section>
     <div class="mat-elevation-z8">
         <div class="search_add">
-            <!-- Button Add -->
             <mat-form-field>
                 <mat-label>{{ "filter" | translate }}</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
+            <!-- Button Add -->
             <button (click)="addUser()" mat-flat-button color="primary" class="add_">
                 <mat-icon>person_add</mat-icon>
             </button>
         </div>
-
         <table mat-table [dataSource]="dataSource" matSort>
-
             <!-- Name Column -->
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameUser" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.name }}</td>
             </ng-container>
-
             <!-- Email Column -->
             <ng-container matColumnDef="email">
                 <th mat-header-cell *matHeaderCellDef>{{ "email" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.email }}</td>
             </ng-container>
-
             <!-- Status Column -->
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ element.status }}</td>
+                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.status) }}</td>
             </ng-container>
-
             <!-- Rol Column -->
             <ng-container matColumnDef="rol">
                 <th mat-header-cell *matHeaderCellDef>{{ "rol" | translate }}</th>
-                <td mat-cell *matCellDef="let element" >{{ element.rol }}</td>
+                <td mat-cell *matCellDef="let element" >{{ translateRolName(element.rol) }}</td>
             </ng-container>
-
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element" id="tdaction">
-                    <mat-icon (click)="addUser(element.id)" class="btn-edit"
-                        matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
-                    <mat-icon (click)="deleteUser(element.id)" class="btn-delete"
-                        matTooltip="{{ 'delete' | translate }} {{ element.name }}" >delete</mat-icon>
+                    <mat-icon (click)="addUser(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
+                    <mat-icon (click)="deleteUser(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ element.name }}" >delete</mat-icon>
                 </td>
             </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
 </section>
