--- a/frontend-bar/src/app/components/user/login/login.component.html
+++ b/frontend-bar/src/app/components/user/login/login.component.html
@@ -13,17 +13,21 @@
           </div>
         </span>
         <span class="login100-form-title p-b-34 p-t-27">{{ "login" | translate }}</span>
-        <div class="wrap-input100 validate-input" data-validate="Enter username">
-          <input class="input100" type="email" name="email" placeholder="{{ 'email' | translate }}" [(ngModel)]="email" autocomplete="off">
-          <span class="focus-input100" data-placeholder="&#xf207;"></span>
-        </div>
-        <div class="wrap-input100 validate-input" data-validate="Enter password">
-          <input class="input100" type="password" name="pass" placeholder="{{ 'password' | translate }}" [(ngModel)]="password">
-          <span class="focus-input100" data-placeholder="&#xf191;"></span>
-        </div>
-        <div class="container-login100-form-btn">
-          <button class="login100-form-btn" type="button" (click)="login()">{{ "login" | translate }}</button>
-        </div>
+        <form [formGroup]="form" (ngSubmit)="login()">
+          <!-- Email Input -->
+          <div class="wrap-input100 validate-input" data-validate="Enter username">
+            <input formControlName="email" class="input100" type="email" placeholder="{{ 'email' | translate }}" autocomplete="off">
+            <span class="focus-input100" data-placeholder="&#xf207;"></span>
+          </div>
+          <!-- Password Input -->
+          <div class="wrap-input100 validate-input" data-validate="Enter password">
+            <input formControlName="password" class="input100" type="password" placeholder="{{ 'password' | translate }}">
+            <span class="focus-input100" data-placeholder="&#xf191;"></span>
+          </div>
+          <div class="container-login100-form-btn">
+            <button type="submit" [disabled]="form.invalid" class="login100-form-btn">{{ "login" | translate }}</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
