--- a/frontend-bar/src/app/components/products/list-product/list-product.component.html
+++ b/frontend-bar/src/app/components/products/list-product/list-product.component.html
@@ -7,6 +7,7 @@
                 <mat-label>{{ "filter" | translate }}</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
+            <mat-icon (click)="refresh()">refresh</mat-icon>
             <!-- Button Add -->
             <button (click)="addProduct()" mat-flat-button color="primary" class="add_">
                 <mat-icon>add</mat-icon>
@@ -22,7 +23,7 @@
             <ng-container matColumnDef="image">
                 <th mat-header-cell *matHeaderCellDef>{{ "imageProduct" | translate }}</th>
                 <td mat-cell *matCellDef="let element">
-                    <img [src]="baseUrl + element.image" alt="Product Image">
+                  <img [src]="baseUrl + element.image + '?' + refreshTime" alt="Product Image">
                 </td>
             </ng-container>
             <!-- Price Column -->
