--- a/frontend-bar/src/app/components/table/list-table/list-table.component.html
+++ b/frontend-bar/src/app/components/table/list-table/list-table.component.html
@@ -7,6 +7,7 @@
                 <mat-label>{{ "filter" | translate }}</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
+            <mat-icon (click)="refresh()">refresh</mat-icon>
             <!-- Button Add -->
             <button (click)="addTable()" mat-flat-button color="primary" class="add_">
                 <mat-icon class="btn-delete">add</mat-icon>
