--- a/frontend-bar/src/app/components/user/list-user/list-user.component.html
+++ b/frontend-bar/src/app/components/user/list-user/list-user.component.html
@@ -7,6 +7,7 @@
                 <mat-label>{{ "filter" | translate }}</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
+            <mat-icon (click)="refresh()">refresh</mat-icon>
             <!-- Button Add -->
             <button (click)="addUser()" mat-flat-button color="primary" class="add_">
                 <mat-icon>person_add</mat-icon>
