--- a/frontend-bar/src/app/components/chart/chart.component.html
+++ b/frontend-bar/src/app/components/chart/chart.component.html
@@ -13,10 +13,8 @@
             <canvas id="chartPie"></canvas>
         </div>
         <div class="lines_chart">
-            <canvas id="chart"></canvas>
+            <canvas id="chartLine"></canvas>
         </div>
-    </div>
-    <div class="bottom_chart">
         <div class="polar_chart">
             <canvas id="chartPolar"></canvas>
         </div>
