--- a/frontend-bar/src/app/components/navbar/navbar.component.html
+++ b/frontend-bar/src/app/components/navbar/navbar.component.html
@@ -4,6 +4,7 @@
         <a href="/events">{{"events" | translate }}</a>
         <a href="/products">{{"products" | translate }}</a>
         <a href="/order">{{"orders" | translate }}</a>
+        <a href="/chart">{{"chartNav" | translate }}</a>
         <a type="button" mat-menu-item [matMenuTriggerFor]="setting">{{ "setting" | translate }}</a>
         <a (click)="logOut()">{{"exit" | translate}}</a>
     </div>
@@ -24,6 +25,7 @@
     <a href="/events">{{"events" | translate }}</a>
     <a href="/products">{{"products" | translate }}</a>
     <a href="/order">{{"orders" | translate }}</a>
+    <a href="/chart">{{"chartNav" | translate }}</a>
     <a mat-menu-item [matMenuTriggerFor]="setting">{{ "setting" | translate }}</a>
     <a (click)="logOut()">{{"exit" | translate}}</a>
     <div class="language-buttons_h">
