--- a/frontend-bar/src/app/components/chart/chart.component.css
+++ b/frontend-bar/src/app/components/chart/chart.component.css
@@ -15,71 +15,73 @@
     font-family: "Acumin Variable Concept";
 }
 .charts {
-    padding-left: 20px;
-    padding-right: 20px; 
-    display: flex;
-    flex-direction: column;
     width: 100%;
-    justify-content: center;
 }
-
 .top_chart {
     display: flex;
     width: 100%;
     height: auto;
-    gap: 3%;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    gap: 25px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-
 .top_chart>*,
 .bottom_chart>* {
     -webkit-box-shadow: 0px 0px 25px 11px rgba(189, 189, 189, 1);
     -moz-box-shadow: 0px 0px 25px 11px rgba(189, 189, 189, 1);
     box-shadow: 0px 0px 25px 11px rgba(189, 189, 189, 1);
 }
-
-.bottom_chart {
-    display: flex;
-    width: 100%;
-    height: auto;
-    gap: 3%;
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-.bars_chart{
-    width: 33%;
-    height: 350px;
-    padding: 15px;
+.top_chart div{
+    width: 48%;
+    height: 450px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.lines_chart {
-    width: 33%;
-    height: 350px;
-    padding: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 2%;
 }
 
-.pie_chart,
-.polar_chart,
-.scatter_chart,
-.radar_chart 
- {
-    width: 33%;
-    height: 350px;
-    padding: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+@media screen and (min-width: 240px) and (max-width: 320px){
+    .top_chart div{
+        width: 100%;
+        height: 240px;
+        padding: 5px;
+        margin: 5px;
+    }
 }
 
-#chart, #chartPie{
-    width: 100% !important; 
-    height: 100% !important;
-    object-fit: contain;
+@media screen and (min-width: 321px) and (max-width: 420px){
+    .top_chart div{
+        width: 100%;
+        height: 240px;
+        padding: 5px;
+        margin: 5px;
+    }
+}
+
+@media screen and (min-width: 421px) and (max-width: 950px){
+    .top_chart{
+        padding: 20px;
+        margin-top: -30px;
+    }
+    .top_chart div{
+        width: 100%;
+        height: 340px;
+        padding: 15px;
+        margin: 5px;
+    }
+}
+
+@media screen and (min-width: 951px) and (max-width: 1200px){
+    .top_chart{
+        padding: 20px;
+        margin-top: -30px;
+    }
+    .top_chart div{
+        width: 100%;
+        height: 400px;
+        padding: 5px;
+        margin: 5px;
+    }
 }
