--- a/frontend-bar/src/app/components/order/list-order-employee/list-order-employee.component.html
+++ b/frontend-bar/src/app/components/order/list-order-employee/list-order-employee.component.html
@@ -13,48 +13,50 @@
                 <mat-icon class="btn-delete">add</mat-icon>
             </button>
         </div>
-        <table mat-table [dataSource]="dataSource" matSort>
-            <!-- Type Document Column -->
-            <ng-container matColumnDef="type_document">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "typeDocument" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.type_document }}</td>
-            </ng-container>
-            <!-- Number Document Column -->
-            <ng-container matColumnDef="num_document">
-                <th mat-header-cell *matHeaderCellDef>{{ "numDocument" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.num_document }}</td>
-            </ng-container>
-            <!-- Table Column -->
-            <ng-container matColumnDef="table">
-                <th mat-header-cell *matHeaderCellDef>{{ "gridTable" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.name_table }}</td>
-            </ng-container>
-            <!-- Status Column -->
-            <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.status) }}</td>
-            </ng-container>
-            <!-- Action Buttons -->
-            <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
-                <td mat-cell *matCellDef="let element" id="tdaction">
-                    <button class="buttonaction" (click)="orderProductId(element.id)" [disabled]="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'">
-                        <mat-icon *ngIf="element.status === 'Active'" class="btn-delete" matTooltip="{{ 'Pedir' | translate }}">liquor</mat-icon>
-                        <mat-icon *ngIf="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'" class="btn-delete">liquor</mat-icon>
-                    </button>
-                    <button class="buttonaction" (click)="addOrder(element.id)" [disabled]="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'">
-                        <mat-icon *ngIf="element.status === 'Active'" class="btn-edit" matTooltip="{{ 'paided' | translate }}">paid</mat-icon>
-                        <mat-icon *ngIf="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'" class="btn-edit">paid</mat-icon>
-                    </button>
-                    <button class="buttonaction" (click)="deleteOrder(element.id)" [disabled]="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'">
-                        <mat-icon *ngIf="element.status === 'Active'" class="btn-delete" matTooltip="{{ 'cancel' | translate }}">cancel</mat-icon>
-                        <mat-icon *ngIf="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'" class="btn-delete">cancel</mat-icon>
-                    </button>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <div class="table-responsive">
+            <table mat-table [dataSource]="dataSource" matSort>
+                <!-- Type Document Column -->
+                <ng-container matColumnDef="type_document">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "typeDocument" | translate }}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.type_document }}</td>
+                </ng-container>
+                <!-- Number Document Column -->
+                <ng-container matColumnDef="num_document">
+                    <th mat-header-cell *matHeaderCellDef>{{ "numDocument" | translate }}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.num_document }}</td>
+                </ng-container>
+                <!-- Table Column -->
+                <ng-container matColumnDef="table">
+                    <th mat-header-cell *matHeaderCellDef>{{ "gridTable" | translate }}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.name_table }}</td>
+                </ng-container>
+                <!-- Status Column -->
+                <ng-container matColumnDef="status">
+                    <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
+                    <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.status) }}</td>
+                </ng-container>
+                <!-- Action Buttons -->
+                <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
+                    <td mat-cell *matCellDef="let element" id="tdaction">
+                        <button class="buttonaction" (click)="orderProductId(element.id)" [disabled]="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'">
+                            <mat-icon *ngIf="element.status === 'Active'" class="btn-delete" matTooltip="{{ 'Pedir' | translate }}">liquor</mat-icon>
+                            <mat-icon *ngIf="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'" class="btn-delete">liquor</mat-icon>
+                        </button>
+                        <button class="buttonaction" (click)="addOrder(element.id)" [disabled]="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'">
+                            <mat-icon *ngIf="element.status === 'Active'" class="btn-edit" matTooltip="{{ 'paided' | translate }}">paid</mat-icon>
+                            <mat-icon *ngIf="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'" class="btn-edit">paid</mat-icon>
+                        </button>
+                        <button class="buttonaction" (click)="deleteOrder(element.id)" [disabled]="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'">
+                            <mat-icon *ngIf="element.status === 'Active'" class="btn-delete" matTooltip="{{ 'cancel' | translate }}">cancel</mat-icon>
+                            <mat-icon *ngIf="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'" class="btn-delete">cancel</mat-icon>
+                        </button>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
 </section>
