--- a/frontend-bar/src/app/components/products/list-product/list-product.component.html
+++ b/frontend-bar/src/app/components/products/list-product/list-product.component.html
@@ -13,43 +13,48 @@
                 <mat-icon>add</mat-icon>
             </button>
         </div>
-        <table mat-table [dataSource]="dataSource" matSort>
-            <!-- Name Product Column -->
-            <ng-container matColumnDef="name_product">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameProduct" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.name_product }}</td>
-            </ng-container>
-            <!-- Image Column -->
-            <ng-container matColumnDef="image">
-                <th mat-header-cell *matHeaderCellDef>{{ "imageProduct" | translate }}</th>
-                <td mat-cell *matCellDef="let element">
-                  <img [src]="baseUrl + element.image + '?' + refreshTime" alt="Product Image">
-                </td>
-            </ng-container>
-            <!-- Price Column -->
-            <ng-container matColumnDef="price">
-                <th mat-header-cell *matHeaderCellDef>{{ "price" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.price }}</td>
-            </ng-container>
-            <!-- Stock Column -->
-            <ng-container matColumnDef="stock">
-                <th mat-header-cell *matHeaderCellDef>{{ "stock" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
-            </ng-container>
-            <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.status) }}</td>
-            </ng-container>
-            <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
-                <td mat-cell *matCellDef="let element" id="tdaction">
-                    <mat-icon (click)="addProduct(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ element.name_product }}">edit</mat-icon>
-                    <mat-icon (click)="deleteProduct(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ element.name_product }}" >delete</mat-icon>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <div class="table-responsive">
+            <table mat-table [dataSource]="dataSource" matSort>
+                <!-- Name Product Column -->
+                <ng-container matColumnDef="name_product">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameProduct" | translate }}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.name_product }}</td>
+                </ng-container>
+                <!-- Image Column -->
+                <ng-container matColumnDef="image">
+                    <th mat-header-cell *matHeaderCellDef>{{ "imageProduct" | translate }}</th>
+                    <td mat-cell *matCellDef="let element">
+                        <img [src]="baseUrl + element.image + '?' + refreshTime" alt="Product Image">
+                    </td>
+                </ng-container>
+                <!-- Price Column -->
+                <ng-container matColumnDef="price">
+                    <th mat-header-cell *matHeaderCellDef>{{ "price" | translate }}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+                </ng-container>
+                <!-- Stock Column -->
+                <ng-container matColumnDef="stock">
+                    <th mat-header-cell *matHeaderCellDef>{{ "stock" | translate }}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
+                </ng-container>
+                <ng-container matColumnDef="status">
+                    <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
+                    <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{
+                        translateStateName(element.status) }}</td>
+                </ng-container>
+                <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
+                    <td mat-cell *matCellDef="let element" id="tdaction">
+                        <mat-icon (click)="addProduct(element.id)" class="btn-edit"
+                            matTooltip="{{ 'edit' | translate }} {{ element.name_product }}">edit</mat-icon>
+                        <mat-icon (click)="deleteProduct(element.id)" class="btn-delete"
+                            matTooltip="{{ 'delete' | translate }} {{ element.name_product }}">delete</mat-icon>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
 </section>
