--- a/frontend-bar/src/app/components/status/list-status/list-status.component.html
+++ b/frontend-bar/src/app/components/status/list-status/list-status.component.html
@@ -13,22 +13,24 @@
                 <mat-icon>add</mat-icon>
             </button>
         </div>
-        <table mat-table [dataSource]="dataSource" matSort>
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameStatus" | translate }}</th>
-                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.name) }}</td>
-            </ng-container>
-            <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
-                <td mat-cell *matCellDef="let element" id="tdaction">
-                    <mat-icon (click)="addStatus(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ translateStateName(element.name) }}">edit</mat-icon>
-                    <mat-icon (click)="deleteStatus(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ translateStateName(element.name) }}" >delete</mat-icon>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <div class="table-responsive">
+            <table mat-table [dataSource]="dataSource" matSort>
+                <!-- Name Column -->
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameStatus" | translate }}</th>
+                    <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.name) }}</td>
+                </ng-container>
+                <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
+                    <td mat-cell *matCellDef="let element" id="tdaction">
+                        <mat-icon (click)="addStatus(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ translateStateName(element.name) }}">edit</mat-icon>
+                        <mat-icon (click)="deleteStatus(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ translateStateName(element.name) }}" >delete</mat-icon>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
 </section>
