--- a/frontend-bar/src/app/components/table/list-table/list-table.component.html
+++ b/frontend-bar/src/app/components/table/list-table/list-table.component.html
@@ -13,27 +13,29 @@
                 <mat-icon class="btn-delete">add</mat-icon>
             </button>
         </div>
-        <table mat-table [dataSource]="dataSource" matSort>
-            <!-- Name Column -->
-            <ng-container matColumnDef="name_table">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameTable" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.name_table }}</td>
-            </ng-container>
-            <!-- Status Column -->
-            <ng-container matColumnDef="name_status">
-                <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.name) }}</td>
-            </ng-container>
-            <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
-                <td mat-cell *matCellDef="let element" id="tdaction">
-                    <mat-icon (click)="addTable(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ element.name_table }}">edit</mat-icon>
-                    <mat-icon (click)="deleteUser(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ element.name_table }}" >delete</mat-icon>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <div class="table-responsive">
+            <table mat-table [dataSource]="dataSource" matSort>
+                <!-- Name Column -->
+                <ng-container matColumnDef="name_table">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameTable" | translate }}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.name_table }}</td>
+                </ng-container>
+                <!-- Status Column -->
+                <ng-container matColumnDef="name_status">
+                    <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
+                    <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.name) }}</td>
+                </ng-container>
+                <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
+                    <td mat-cell *matCellDef="let element" id="tdaction">
+                        <mat-icon (click)="addTable(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ element.name_table }}">edit</mat-icon>
+                        <mat-icon (click)="deleteUser(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ element.name_table }}" >delete</mat-icon>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
 </section>
