--- a/frontend-bar/src/app/components/user/list-user/list-user.component.html
+++ b/frontend-bar/src/app/components/user/list-user/list-user.component.html
@@ -13,37 +13,42 @@
                 <mat-icon>person_add</mat-icon>
             </button>
         </div>
-        <table mat-table [dataSource]="dataSource" matSort>
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameUser" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-            </ng-container>
-            <!-- Email Column -->
-            <ng-container matColumnDef="email">
-                <th mat-header-cell *matHeaderCellDef>{{ "email" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-            </ng-container>
-            <!-- Status Column -->
-            <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
-                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{ translateStateName(element.status) }}</td>
-            </ng-container>
-            <!-- Rol Column -->
-            <ng-container matColumnDef="rol">
-                <th mat-header-cell *matHeaderCellDef>{{ "rol" | translate }}</th>
-                <td mat-cell *matCellDef="let element" >{{ translateRolName(element.rol) }}</td>
-            </ng-container>
-            <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
-                <td mat-cell *matCellDef="let element" id="tdaction">
-                    <mat-icon (click)="addUser(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
-                    <mat-icon (click)="deleteUser(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ element.name }}" >delete</mat-icon>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <div class="table-responsive">
+            <table mat-table [dataSource]="dataSource" matSort>
+                <!-- Name Column -->
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameUser" | translate }}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+                </ng-container>
+                <!-- Email Column -->
+                <ng-container matColumnDef="email">
+                    <th mat-header-cell *matHeaderCellDef>{{ "email" | translate }}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+                </ng-container>
+                <!-- Status Column -->
+                <ng-container matColumnDef="status">
+                    <th mat-header-cell *matHeaderCellDef>{{ "statusList" | translate }}</th>
+                    <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.colorStatus}">{{
+                        translateStateName(element.status) }}</td>
+                </ng-container>
+                <!-- Rol Column -->
+                <ng-container matColumnDef="rol">
+                    <th mat-header-cell *matHeaderCellDef>{{ "rol" | translate }}</th>
+                    <td mat-cell *matCellDef="let element">{{ translateRolName(element.rol) }}</td>
+                </ng-container>
+                <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
+                    <td mat-cell *matCellDef="let element" id="tdaction">
+                        <mat-icon (click)="addUser(element.id)" class="btn-edit"
+                            matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
+                        <mat-icon (click)="deleteUser(element.id)" class="btn-delete"
+                            matTooltip="{{ 'delete' | translate }} {{ element.name }}">delete</mat-icon>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
 </section>
